<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pasarela_de_pago_payphone"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="145dp"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/iphone12" />

        <Button
            android:id="@+id/btn_comprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="comprar"
            android:text="@string/comprar" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_telefono">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_numero_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_de_pa_s"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_codigo_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_c_dula"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_numero_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direcci_n_de_referencia"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_direccion_referencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>